--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack-dev-server",
-    "build": "webpack"
+    "build": "rimraf ./dist && cross-env NODE_ENV=production webpack"
   },
   "author": "",
   "license": "ISC",
