--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,7 @@
 {
-    "presets": ["@babel/preset-react"]
+    "presets": ["@babel/preset-react"],
+    "plugins": [
+        ["@babel/plugin-proposal-class-properties"],
+        ["import", { "libraryName": "antd-mobile", "style": "css" }] // `style: true` 会加载 less 文件
+      ]
 }
