--- a/package.json
+++ b/package.json
@@ -11,17 +11,25 @@
   "license": "ISC",
   "dependencies": {
     "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.3.0",
     "@babel/preset-react": "^7.0.0",
+    "antd-mobile": "^2.2.8",
     "babel": "^6.23.0",
     "babel-loader": "^8.0.4",
+    "babel-plugin-import": "^1.11.0",
     "cross-env": "^5.2.0",
+    "css-loader": "^2.1.0",
     "html-webpack-plugin": "^3.2.0",
+    "less": "^3.9.0",
+    "less-loader": "^4.1.0",
     "mockjs": "^1.0.1-beta3",
+    "rc-form": "^2.4.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
+    "style-loader": "^0.23.1",
     "webpack": "^4.28.0",
     "webpack-cli": "^3.1.2"
   },
