--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-    "presets": ["@babel/preset-react"],
+    "presets": ["@babel/preset-env", "@babel/preset-react"],
     "plugins": [
         ["@babel/plugin-proposal-class-properties"],
         ["import", { "libraryName": "antd-mobile", "style": "css" }] // `style: true` 会加载 less 文件
