--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack-dev-server",
     "build": "rimraf ./dist && cross-env NODE_ENV=production webpack",
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "npm run test -- --watch"
   },
   "author": "",
   "license": "ISC",
@@ -23,7 +24,6 @@
     "fetch-mock": "^7.3.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.0.0",
-    "jest-loader": "^0.0.0",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "mockjs": "^1.0.1-beta3",
