--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
     "antd-mobile": "^2.2.8",
+    "babel-jest": "^24.1.0",
     "babel-loader": "^8.0.4",
     "babel-plugin-import": "^1.11.0",
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.0",
+    "enzyme": "^3.8.0",
     "fetch-mock": "^7.3.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.0.0",
