--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.0",
     "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.9.1",
     "fetch-mock": "^7.3.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.0.0",
