--- a/package.json
+++ b/package.json
@@ -20,13 +20,15 @@
     "babel-jest": "^24.1.0",
     "babel-loader": "^8.0.4",
     "babel-plugin-import": "^1.11.0",
+    "babel-plugin-transform-require-ignore": "^0.1.1",
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.0",
     "enzyme": "^3.8.0",
-    "enzyme-adapter-react-16": "^1.9.1",
+    "enzyme-adapter-react-16": "^1.8.0",
     "fetch-mock": "^7.3.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.0.0",
+    "jest-transform-css": "^2.0.0",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "mockjs": "^1.0.1-beta3",
@@ -43,6 +45,7 @@
     "webpack-cli": "^3.1.2"
   },
   "devDependencies": {
+    "jest-css-modules-transform": "^2.1.1",
     "webpack-dev-server": "^3.1.14"
   }
 }
